<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/song_list_background"
    android:elevation="5dp"
    android:layout_marginBottom="5dp"
    android:id="@+id/songFrame"
    >

    <ImageView
        android:id="@+id/album_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/allSong"
        android:background="@drawable/album_background"
        android:src="@drawable/placholder_album_art"
        android:padding="3dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/song_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:singleLine="true"
        android:text="Song Name"

        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/likeButton"
        app:layout_constraintStart_toEndOf="@+id/album_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/song_artist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="Artist"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/play"
        app:layout_constraintStart_toEndOf="@+id/album_image"
        app:layout_constraintTop_toBottomOf="@id/song_title" />

    <ImageView
        android:contentDescription="@string/play"
        android:id="@+id/play"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/play" />

    <ImageButton
        android:id="@+id/likeButton"
        android:contentDescription="@string/favorite"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:scaleType="centerInside"
        android:layout_marginEnd="20dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/play"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/like" />

</androidx.constraintlayout.widget.ConstraintLayout>
